gitops/apps/programmer/programmer-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: programmer
