gitops/apps/programmer/programmer-postgresql-ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: programmer-postgresql
  namespace: programmer
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  entryPoints:
    - postgres
  routes:
    - match: HostSNI(`*`)
      services:
        - name: programmer-server-postgresql
          port: 5432
